--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,11 @@
 <!-- <img src="http://saugau.edge.vccloud.vn/static/mainpage/images/chad.jpeg" alt="Ảnh này bị lỗi"> -->
 <br>
 <h1>Sapphire CDN</h1>
-<!-- <h2>Running: Statistic pace chạy</h2>
-<br>
-<img src="{% static 'mainpage/images/chad.jpeg' %}">
 <br>
 <br>
-<img src="{% static 'mainpage/images/qtv.jpeg' %}">
-<br>
-<br>
-<video width="320" height="240" controls>
-    <source src="sample-mp4-file.mp4" type="video/mp4">
-</video> -->
+{% if domain %}
+    <h2>Domain đã khởi tạo</h2>
+    <h3>{{ domain }}</h3>
+{% else %}
+    <h2>Bạn chưa khởi tạo domain nào. Hãy khởi tạo ngay</h2>
+{% endif %}
