--- a/templates/create.html
+++ b/templates/create.html
@@ -9,6 +9,7 @@
 <body>
   {% include 'navbar.html' %}
   <div class="container">
+    <h2>Sau khi tạo domain, vui lòng chuyển đường dẫn từ file cần chạy qua cdn: Ví dụ example.com/image.png thành cdn.example.com/image.png</h2>
     <h1 class="text-center">Create new CDN</h1>
     <form action="/create/" method="post">
       {% csrf_token %}
