--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,6 +13,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/create/">Create</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/create/">Rule</a>
+          </li>
            {% endif %}
         </ul>
         <ul class="navbar-nav">
