--- a/templates/rule.html
+++ b/templates/rule.html
@@ -11,7 +11,7 @@
   <div class="container">
     <h2>Sau khi tạo domain, vui lòng chuyển đường dẫn từ file cần chạy qua cdn: Ví dụ example.com/image.png thành cdn.example.com/image.png</h2>
     <h1 class="text-center">Create new CDN</h1>
-    <form action="/create/" method="post">
+    <form action="/rule/" method="post">
       {% csrf_token %}
       <div class="mb-3">
         <label for="domain" class="form-label">Domain</label>
