--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,7 +14,7 @@
                 <a class="nav-link" href="/create/">Create</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/create/">Rule</a>
+              <a class="nav-link" href="/rule/">Rule</a>
           </li>
            {% endif %}
         </ul>
