--- a/templates/rule.html
+++ b/templates/rule.html
@@ -8,8 +8,12 @@
 </head>
 <body>
   {% include 'navbar.html' %}
-  <div class="container">
+  <br>
+  <br>
+  <br>
 
+  <div class="container">
+    <h1>Conditions</h1>
     <select class="form-select form-select-sm" aria-label=".form-select-sm example">
         <option selected>Open this select menu</option>
         <option value="1">One</option>
