--- a/templates/rule.html
+++ b/templates/rule.html
@@ -14,7 +14,7 @@
 
   <div class="container">
     <h1>Conditions</h1>
-    <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+    <select class="form-select form-select-sm" aria-label=".form-select-sm example" id="selectBox">
         <option selected>Open this select menu</option>
         <option value="1">One</option>
         <option value="2">Two</option>
