--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% include 'navbar.html' %}
 
 
-<section style="background: url(/static/hero.jpeg); background-size: cover; background-position: center center" class="hero">
+<section style="background: url(/hero.jpeg); background-size: cover; background-position: center center" class="hero">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
