--- a/templates/rule.html
+++ b/templates/rule.html
@@ -57,6 +57,8 @@
             while (paragraphs.length > 0) {
             contentDiv.removeChild(paragraphs[0]);
             }
+            const carModelWrapper = document.getElementById('car-model-wrapper');
+            carModelWrapper.style.direction = "none";
         }
     })
 </script>
