--- a/templates/rule.html
+++ b/templates/rule.html
@@ -58,7 +58,7 @@
             contentDiv.removeChild(paragraphs[0]);
             }
             const carModelWrapper = document.getElementById('car-model-wrapper');
-            carModelWrapper.style.direction = "none";
+            carModelWrapper.style.display = "none";
         }
     })
 </script>
