--- a/templates/rule.html
+++ b/templates/rule.html
@@ -17,7 +17,7 @@
     <h2>If</h2>
     <select class="form-select form-select-sm" aria-label=".form-select-sm example" id="condition">
         <option selected>Open this select menu</option>
-        <option value="1">Path</option>
+        <option value="Path">Path</option>
         <option value="2">Two</option>
         <option value="3">Three</option>
     </select>
