--- a/templates/rule.html
+++ b/templates/rule.html
@@ -35,7 +35,7 @@
 
 <script>
     const carModels = {
-    Path: ['Corolla', 'Camry', 'Highlander'],
+    Path: ['Equal', 'Not Equal'],
     Honda: ['Civic', 'Accord', 'CR-V'],
     Ford: ['Mustang', 'F-150', 'Explorer'],
   };
