--- a/templates/rule.html
+++ b/templates/rule.html
@@ -29,6 +29,12 @@
       <br>
       <input type="text" class="form-control">
     </div>
+    <h2>Then</h2>
+    <select class="form-select form-select-sm" aria-label=".form-select-sm example" id="action">
+      <option value="ignore-query-string">Ignore query string</option>
+      <option value="rewrite-url">Rewrite URL</option>
+
+    </select>
   </div>
 </body>
 </html>
