--- a/templates/rule.html
+++ b/templates/rule.html
@@ -86,7 +86,7 @@
 
     actionBox.addEventListener("change", () => {
       const actionValue = actionBox.value
-      if (actionValue === "Rewrite URL") {
+      if (actionValue === "rewrite-url") {
         const actionWarpper = document.getElementById("action-wrapper")
         actionWarpper.style.display = "block";
       }
