--- a/templates/rule.html
+++ b/templates/rule.html
@@ -40,7 +40,7 @@
       <br>
       <input type="text" class="form-control" placeholder="Destination">
     </div>
-
+    <button type="submit" class="btn btn-primary">Tạo rule</button>
   </div>
 </body>
 </html>
