--- a/templates/test.html
+++ b/templates/test.html
@@ -1,4 +1,5 @@
 <form action="/create/" method="post">
+  {% csrf_token %}
   <div class="form-group">
     <label for="exampleSelect">Select Example</label>
     <select class="form-control" id="exampleSelect">
