--- a/templates/test.html
+++ b/templates/test.html
@@ -1,4 +1,4 @@
-<form action="/create/" method="post">
+<form action="/test/" method="post">
   {% csrf_token %}
   <div class="form-group">
     <label for="exampleSelect">Select Example</label>
