--- a/templates/test.html
+++ b/templates/test.html
@@ -10,7 +10,7 @@
   </div>
   <div class="form-group">
     <label for="exampleText">Text Example</label>
-    <input type="text" class="form-control" id="exampleText">
+    <input type="text" class="form-control" id="exampleText" name="foo">
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
