--- a/templates/test.html
+++ b/templates/test.html
@@ -3,9 +3,9 @@
   <div class="form-group">
     <label for="exampleSelect">Select Example</label>
     <select class="form-control" id="exampleSelect">
-      <option>Option 1</option>
-      <option>Option 2</option>
-      <option>Option 3</option>
+      <option value="option1">Option 1</option>
+      <option value="option2">Option 2</option>
+      <option value="option3">Option 3</option>
     </select>
   </div>
   <div class="form-group">
