--- a/templates/test.html
+++ b/templates/test.html
@@ -2,7 +2,7 @@
   {% csrf_token %}
   <div class="form-group">
     <label for="exampleSelect">Select Example</label>
-    <select class="form-control" id="exampleSelect">
+    <select class="form-control" id="exampleSelect" name="something">
       <option value="option1">Option 1</option>
       <option value="option2">Option 2</option>
       <option value="option3">Option 3</option>
