--- a/templates/rule.html
+++ b/templates/rule.html
@@ -14,6 +14,7 @@
 
   <div class="container">
     <form action="/rule/" method="post">
+      {% csrf_token %}
       <h1>Conditions</h1>
       <h2>If</h2>
       <select class="form-select form-select-sm" aria-label=".form-select-sm example" id="condition">
