--- a/templates/rule.html
+++ b/templates/rule.html
@@ -17,7 +17,7 @@
       {% csrf_token %}
       <h1>Conditions</h1>
       <h2>If</h2>
-      <select class="form-select form-select-sm" aria-label=".form-select-sm example" id="condition">
+      <select class="form-select form-select-sm" aria-label=".form-select-sm example" id="condition" name="condition">
           <option value="Path">Path</option>
           <option value="2">Two</option>
           <option value="3">Three</option>
