--- a/templates/rule.html
+++ b/templates/rule.html
@@ -38,9 +38,9 @@
       </select>
       <div class="form-group" id="action-wrapper" style="display: none;">
         <br>
-        <input type="text" class="form-control" placeholder="Source pattern">
+        <input type="text" class="form-control" placeholder="Source pattern" name="source-pattern">
         <br>
-        <input type="text" class="form-control" placeholder="Destination">
+        <input type="text" class="form-control" placeholder="Destination" name="destination">
       </div>
       <br>
       <div class="text-end">
