--- a/templates/rule.html
+++ b/templates/rule.html
@@ -19,7 +19,7 @@
       <h2>If</h2>
       <select class="form-select form-select-sm" aria-label=".form-select-sm example" id="condition" name="condition">
           <option value="Path">Path</option>
-          <option value="2">Two</option>
+          <option value="request-method">Request method</option>
           <option value="3">Three</option>
       </select>
       <div id="content">
