--- a/templates/rule.html
+++ b/templates/rule.html
@@ -84,7 +84,7 @@
             // Tạo input
             var inputPath = document.createElement("input")
             inputPath.setAttribute("class", "form-control")
-            inputPath.setAttribute("id", "compare-value")
+            inputPath.setAttribute("class", "compare-value")
             conditionWrapper.appendChild(inputPath)
   });
             contentDiv.appendChild(newParagraph);
