--- a/templates/rule.html
+++ b/templates/rule.html
@@ -72,9 +72,16 @@
         const selectedValue = selectBox.value;
         if (selectedValue === 'Path') {
             // Add a new element to the content div
-            const compareValue = document.getElementById("compare-value")
+
+            // Remove old compare value
+
+            const compareValue = document.getElementsByClassName("compare-value")
             console.log(compareValue)
             compareValue.parentElement.removeChild(compareValue)
+
+
+
+
             conditionWrapper.style.display = "block";
             const models = carModels[selectedValue];
             compareMethod.innerHTML = ""
