--- a/templates/rule.html
+++ b/templates/rule.html
@@ -77,7 +77,7 @@
 
             const compareValue = document.getElementsByClassName("compare-value")
             console.log(compareValue)
-            compareValue.parentElement.removeChild(compareValue)
+            // compareValue.parentElement.removeChild(compareValue)
 
 
 
