--- a/templates/rule.html
+++ b/templates/rule.html
@@ -83,6 +83,8 @@
             }
             // compareValue.parentElement.removeChild(compareValue)
 
+            console.log(document.getElementsByClassName("compare-value"))
+
 
 
 
