--- a/templates/rule.html
+++ b/templates/rule.html
@@ -82,7 +82,8 @@
               element.parentElement.removeChild(element)
             }
             // compareValue.parentElement.removeChild(compareValue)
-
+            
+            console.log("After removing class compare value")
             console.log(document.getElementsByClassName("compare-value"))
 
 
