--- a/templates/rule.html
+++ b/templates/rule.html
@@ -97,8 +97,8 @@
 
             // Tạo input
             var inputPath = document.createElement("input")
-            inputPath.setAttribute("class", "form-control")
-            inputPath.setAttribute("class", "compare-value")
+            inputPath.classList.add("form-control")
+            inputPath.classList.add("compare-value")
             conditionWrapper.appendChild(inputPath)
   });
         } else if (selectedValue === 'request-method') {
