--- a/templates/rule.html
+++ b/templates/rule.html
@@ -18,6 +18,7 @@
       <h1>Conditions</h1>
       <h2>If</h2>
       <select class="form-select form-select-sm" aria-label=".form-select-sm example" id="condition" name="condition">
+          <option value="Condition">Condition</option>
           <option value="Path">Path</option>
           <option value="request-method">Request method</option>
           <option value="3">Three</option>
