--- a/templates/rule.html
+++ b/templates/rule.html
@@ -28,6 +28,8 @@
       <br>
       <div class="form-group" id="condition-wrapper" style="display: none;">
         <select class="form-control" id="compare-method">
+          <option value="equal">Equal</option>
+          <option value="not-equal">Not Equal</option>
         </select>
         <br>
         <!-- <input type="text" class="form-control"> -->
