--- a/templates/rule.html
+++ b/templates/rule.html
@@ -114,6 +114,7 @@
             getMethod.innerText = "GET"
             postMethod.innerText = "POST"
             requestMethodSelect.appendChild(getMethod)
+            requestMethodSelect.appendChild(postMethod)
             conditionWrapper.appendChild(requestMethodSelect)
 
             // Remove the second paragraph from the content div
